--- a/todo-list-spring/src/main/resources/application.properties
+++ b/todo-list-spring/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=todo-list-spring
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_DB
-spring.,datasource.username=root
-spring.datasource.password=Fernan
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_db
+spring.datasource.username=root
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
